<resources>
    <string name="app_name">FOODZ</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">Sign Up</string>
    <string name="SignUp">Don\'t have an account?</string>
    <string name="nice_to_see_you_again">Nice to see you again!</string>
    <string name="back">Login</string>
    <string name="username">Username</string>
    <string name="log_in">Log In</string>
    <string name="arleady_have_an_account">Arleady have an account?</string>
    <string name="need_help">Need help?</string>
    <string name="sign_up_button">SIGN UP</string>
    <string name="enter_password">Enter Password</string>
    <string name="password">Password</string>
    <string name="email_address">Email-Address</string>
    <string name="email">Email</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_username">Enter username</string>
    <string name="sign_up_welcome">Sign up</string>
    <string name="welcome_to_foodz">Welcome to foodz!</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="request_mpesaexpress">Request MPESAExpress</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
